Using redux but todos are not showing up in that section | Need to fix

--- a/frontend/src/components/Todos/ViewTodos.scss
+++ b/frontend/src/components/Todos/ViewTodos.scss
@@ -5,9 +5,9 @@
     padding: 40px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    max-width: 720px;
+    max-width: 60vw;
     height: 100%;
-    margin: 2rem auto;
+    margin: 1.5rem auto;
     border: 1.5px solid #e3507d;
     display: flex;
     flex-direction: column;
@@ -16,8 +16,6 @@
 
     h3, h4 {
         color: #e3507d;
-        padding: 5px;
-        margin: 10px;
         text-align: center;
         font-weight: 600;
         appearance: none;
@@ -37,7 +35,13 @@
             flex: 1;
         }
         h3 {
-            flex: 7;
+        }
+    }
+
+    .calendar {
+        .fc {
+            max-height: 600px;
+            width: 100%;
         }
     }
 
@@ -206,6 +210,7 @@
             }
         }
     }
+    
     button {
         cursor: pointer;
         width: 100px;
